tests/baselines/reference/AnnotationDeclarationNegative22.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative22.ets(3,11): error TS2300: Duplicate identifier '(Missing)'.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative22.ets(4,1): error TS1003: Identifier expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative22.ets(5,7): error TS1219: Experimental support for decorators is a feature that is subject to change in a future release. Set the 'experimentalDecorators' option in your 'tsconfig' or 'jsconfig' to remove this warning.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative22.ets(7,11): error TS2300: Duplicate identifier '(Missing)'.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative22.ets(8,1): error TS1359: Identifier expected. 'class' is a reserved word that cannot be used here.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative22.ets (5 errors) ====
    declare let interface: ClassDecorator
    declare let f: ClassDecorator;
    @interface
              
!!! error TS2300: Duplicate identifier '(Missing)'.
    @f
    ~
!!! error TS1003: Identifier expected.
    class C1 {}
          ~~
!!! error TS1219: Experimental support for decorators is a feature that is subject to change in a future release. Set the 'experimentalDecorators' option in your 'tsconfig' or 'jsconfig' to remove this warning.
    @f
    @interface
              
!!! error TS2300: Duplicate identifier '(Missing)'.
    class C2 {}
    ~~~~~
!!! error TS1359: Identifier expected. 'class' is a reserved word that cannot be used here.